[gd_scene load_steps=11 format=3 uid="uid://bki6p1fgynypd"]

[ext_resource type="Texture2D" uid="uid://c8dgf5i1qskgi" path="res://rocky_roads/Enemies/slime_red.png" id="1_p4746"]
[ext_resource type="Script" path="res://scripts/pingpong_enemy.gd" id="1_rj8pr"]
[ext_resource type="AudioStream" uid="uid://dbn45ft5pp1sn" path="res://sound/squash.wav" id="2_fey7a"]

[sub_resource type="Animation" id="Animation_v6e77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jpntd"]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_k2n1y"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_bnud8"]
resource_name = "walk"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jhdmi"]
_data = {
"RESET": SubResource("Animation_v6e77"),
"die": SubResource("Animation_jpntd"),
"idle": SubResource("Animation_k2n1y"),
"walk": SubResource("Animation_bnud8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vcf6"]
size = Vector2(9.5, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hyrn"]
size = Vector2(12, 9)

[node name="SlimeEnemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_rj8pr")
speed = 500
squash_sound = ExtResource("2_fey7a")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
texture = ExtResource("1_p4746")
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "walk"
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_jhdmi")
}

[node name="BodyCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 6)
shape = SubResource("RectangleShape2D_7vcf6")

[node name="WallDetector" type="Area2D" parent="."]
visible = false
position = Vector2(-6, 0)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
position = Vector2(1.75, 4)
shape = SubResource("RectangleShape2D_7vcf6")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-10, 0)
target_position = Vector2(0, 14)

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_3hyrn")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="WallDetector" to="." method="_on_change_dir"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detected"]
